fix warnings from netlify
12:45:22 PM: Failed to compile.
12:45:22 PM:
12:45:22 PM: src/components/CartModal.js
12:45:22 PM:   Line 47:13:  img elements must have an alt prop, either with meaningful text, or an empty string for decorative images  jsx-a11y/alt-text
12:45:22 PM: src/components/DrinksModal.js
12:45:22 PM:   Line 60:13:  img elements must have an alt prop, either with meaningful text, or an empty string for decorative images  jsx-a11y/alt-text
12:45:22 PM: src/components/FavDrinksModal.js
12:45:22 PM:   Line 53:13:  img elements must have an alt prop, either with meaningful text, or an empty string for decorative images  jsx-a11y/alt-text
12:45:22 PM: src/components/IngreListModal.js
12:45:22 PM:   Line 24:13:  img elements must have an alt prop, either with meaningful text, or an empty string for decorative images  jsx-a11y/alt-text
12:45:22 PM: src/context/AppReducer.js
12:45:22 PM:   Line 1:1:  Assign arrow function to a variable before exporting as module default  import/no-anonymous-default-export

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Temporary Items
 #sauce: https://github.com/github/gitignore/blob/main/Global/macOS.gitignore
 
 # ignore these folders for this project; embarrassing mess 
+.DS_Store
